[package]
name = "swagger-ui"
version = "0.1.5"
authors = ["kotborealis <kotborealis@awooo.ru>"]
edition = "2021"
exclude = [
    ".idea"
]
description = "Swagger-ui for rust applications"
license = "MIT"
documentation = "https://docs.rs/swagger-ui/"
repository = "https://github.com/kotborealis/swagger-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rocket = ["rocket-swagger-ui"]
# actix-web = ["actix-web-swagger-ui"]

[dependencies]
rust-embed = { version = "~8", features = ["interpolate-folder-path"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
bytes = "~1"

rocket-swagger-ui = { version = "0.1", optional = true }
# actix-web-swagger-ui = { version = "0.1", optional = true }

[build-dependencies]
reqwest = { version = "~0.12", features = ["json", "stream", "rustls-tls"] }
futures = "~0.3"
futures-executor = "~0.3"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
anyhow = "~1"
async-recursion = "~1"